fix overflow-x issues

--- a/mpact/dist_new/css/style.css
+++ b/mpact/dist_new/css/style.css
@@ -138,7 +138,9 @@ html {
     font-family: sans-serif;
     -ms-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
-    font-size: 100%
+    font-size: 100%;
+    overflow: hidden;
+    width: 100vw;
 }
 
 *,
@@ -154,7 +156,8 @@ body {
     color: #333;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    overflow: hidden
+    overflow: hidden;
+    width: 100vw;
 }
 
 .bold {
@@ -162,7 +165,8 @@ body {
 }
 
 .container {
-    overflow-x: hidden
+    overflow-x: hidden;
+    width: 100vw;
 }
 
 .home-background {
